--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,6 +1,6 @@
-sonar.projectKey=gabydias_devopslab-8aso
-sonar.organization=gabydias
-sonar.projectName=Devopslab 8ASO
+sonar.projectKey=TradeRabbit_devopsLab
+sonar.organization=traderabbit 
+sonar.projectName=devopsLab
 sonar.projectVersion=1.0
 sonar.sources=app.py
 sonar.language=py
